--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <li>Docker</li>
         <li>Ansible</li>
         <li>Integração Contínua</li>
-		<li>Titulo de Teste</li>
+		<li>Titulo de Teste Novo</li>
     </ul>
 </body>
 </html>
