--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <li>Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible</li>
         <li>Integração Contínua</li>
-		<li>Titulo de Teste Novo</li>
+		<li>Titulo de Teste 3</li>
     </ul>
 </body>
 </html>
